posicionar home__description sobre o background

--- a/index.html
+++ b/index.html
@@ -10,96 +10,45 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>The barber shop</title>
 </head>
 
 <body>
-
     <!--==================== HEADER ====================-->
-    
-    <header class="header" id="header">
-        <nav class="nav container">
-            <a href="" class="nav__logo">
-                <img src="assets/img/logo.png" alt="logo">
-            </a>
+    <header>
+        <a href="#" class="logo">
+             <img src="/assets/img/logo.png" alt="img logo">
+        </a>
+             <ul>
+                <li><a href="#home">home</a></li>
+                <li><a href="#services">services</a></li>
+                <li><a href="#contact">contact</a></li>
+                <li><a href="#shop">shop</a></li>
+             </ul>
+    </header>
 
-            <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a href="#home" class="nav__link active-link">Home</a>
-                    </li>
+    <section class="banner"></section>
 
-                    <li class="nav__item">
-                        <a href="#services" class="nav__link">Services and prices</a>
-                    </li>
+    <!-- !--==================== MAIN ====================-->
+        <main class="main">
+            <!--==================== HOME ====================-->
+            <section class="home">
+                <div class="home__data">
+                    <h1 class="home__title">
+                        The Barbershop <br>
+                        <span>Expert Haircuts and Grooming Services <br></span>
+                    </h1>
+                    <p class="home__description">
+                        At The Finest Barbershop, we offer a wide range of professional hair cutting and grooming services for men. 
+                        Our experienced barbers use the latest techniques and tools to give you the perfect look. 
+                        Whether you're in need of a classic haircut, straight razor shave, or beard trim, we've got you covered.
+                    </p>
 
-                    <li class="nav__item">
-                        <a href="#academy" class="nav__link">Academy</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="#franchise" class="nav__link">Franchise</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="#our" class="nav__link">Our Team</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="#contact" class="nav__link">Contact</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="#shop" class="nav__link">SHOP</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="#card" class="nav__link">Card</a>
-                    </li>
-                </ul>
-
-                <!--==================== MAIN ====================-->
-                <main class="main">
-                    <!--==================== HOME ====================-->
-                    <section class="home section" id="home">
-                        <div class="home__container container grid">
-                            <img src="assets/img/bg-image.png" alt="home image" class="home__img">
-
-                            <div class="home__data">
-                                <h1 class="home__title">
-                                    The Barbershop
-                                </h1>
-
-                                <div class="home__legend">
-                                    <h2 class="home__subtitle">
-                                        Expert Haircuts and Grooming Services
-                                    </h2>
-
-
-
-                                    <p class="home__description">
-                                        At The Finest Barbershop, we offer a wide range of professional hair cutting and
-                                        grooming
-                                        services for men. Our experienced barbers use the latest techniques and tools to
-                                        give you the perfect look.
-                                        Whether you're in need of a classic haircut, straight razor shave,
-                                        or beard trim, we've got you covered.
-                                    </p>
-
-                                    <a href="#" class="button">
-                                        book a haircut <i class="ri-arrow-right-line"></i>
-                                    </a>
-
-                                    <a href="#" class="button">
-                                        Start shopping <i class="ri-arrow-right-line"></i>
-                                    </a>
-
-                                </div>
-                            </div>
-                        </div>
-
+                </div>
+     <!--=============== MAIN JS ===============-->
+     <script src="assets/js/main.js"></script>
 </body>
 
 </html>
