--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>The barber shop</title>
+    <title>The barber shop ✂️</title>
 </head>
 
 <body>
@@ -22,10 +22,12 @@
              <img src="/assets/img/logo.png" alt="img logo">
         </a>
              <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="#services">services</a></li>
-                <li><a href="#contact">contact</a></li>
-                <li><a href="#shop">shop</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#contact">Contato</a></li>
+                <li><a href="#shop">Shop
+                    <i class="ri-shopping-bag-fill"></i>
+                </a></li>
              </ul>
     </header>
 
@@ -38,12 +40,12 @@
                 <div class="home__data">
                     <h1 class="home__title">
                         The Barbershop <br>
-                        <span>Expert Haircuts and Grooming Services <br></span>
+                        <span>Cortes de cabelo especializados e serviços de beleza<br></span>
                     </h1>
                     <p class="home__description">
-                        At The Finest Barbershop, we offer a wide range of professional hair cutting and grooming services for men. 
-                        Our experienced barbers use the latest techniques and tools to give you the perfect look. 
-                        Whether you're in need of a classic haircut, straight razor shave, or beard trim, we've got you covered.
+                        Na The Barbershop, oferecemos serviços profissionais diversificados de corte e barba. <br>
+                        Nossos barbeiros experientes empregam as mais modernas técnicas e ferramentas para garantir que você obtenha o visual perfeito. <br>
+                        Seja para um corte clássico, barbear com navalha ou para cuidar da sua barba, nossos serviços são a solução certa para todas as suas necessidades.
                     </p>
 
                 </div>
