@media(max-width:768px) foi inicializado

--- a/index.html
+++ b/index.html
@@ -19,38 +19,70 @@
     <!--==================== HEADER ====================-->
     <header>
         <a href="#" class="logo">
-             <img src="/assets/img/logo.png" alt="img logo">
+            <img src="/assets/img/logo.png" alt="img logo">
         </a>
-             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Serviços</a></li>
-                <li><a href="#contact">Contato</a></li>
-                <li><a href="#shop">Shop
+
+        <nav class="nav-bar">
+        <ul class="nav-menu">
+            <li>
+                <a href="#home" class="nav-link">Home</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#services" class="nav-link">Serviços</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#contact" class="nav-link">Contato</a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#shop" class="nav-link">Shop
                     <i class="ri-shopping-bag-fill"></i>
-                </a></li>
-             </ul>
+                </a>
+            </li>
+        </ul>
+
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+
+    </nav>
+
+        <!--==================== NAVBAR MOB ====================-->
+
+        <div class="mob-menu">
+            
+            <i class="ri-align-justify"></i>
+        </div>
+
     </header>
 
     <section class="banner"></section>
 
     <!-- !--==================== MAIN ====================-->
-        <main class="main">
-            <!--==================== HOME ====================-->
-            <section class="home">
-                <div class="home__data">
-                    <h1 class="home__title">
-                        The Barbershop <br>
-                        <span>Cortes de cabelo especializados e serviços de beleza<br></span>
-                    </h1>
-                    <p class="home__description">
-                        Na The Barbershop, oferecemos serviços profissionais diversificados de corte e barba. <br>
-                        Nossos barbeiros experientes empregam as mais modernas técnicas e ferramentas para garantir que você obtenha o visual perfeito. <br>
-                        Seja para um corte clássico, barbear com navalha ou para cuidar da sua barba, nossos serviços são a solução certa para todas as suas necessidades.
-                    </p>
+    <main class="main">
+        <!--==================== HOME ====================-->
+        <section class="home">
+            <div class="home__data">
+                <h1 class="home__title">
+                    The Barbershop <br>
+                    <span>Cortes de cabelo especializados e serviços de beleza<br></span>
+                </h1>
+                <p class="home__description">
+                    Na The Barbershop, oferecemos serviços profissionais diversificados de corte e barba. <br>
+                    Nossos barbeiros experientes empregam as mais modernas técnicas e ferramentas para garantir que você
+                    obtenha o visual perfeito. <br>
+                    Seja para um corte clássico, barbear com navalha ou para cuidar da sua barba, nossos serviços são a
+                    solução certa para todas as suas necessidades.
+                </p>
 
-                </div>
-     <!--=============== MAIN JS ===============-->
-     <script src="assets/js/main.js"></script>
+            </div>
+            <!--=============== MAIN JS ===============-->
+            <script src="assets/js/main.js"></script>
 </body>
 
 </html>
